k8s/bastille/pki-webserver/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx
  namespace: pki-webserver
  labels:
    app: nginx
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        volumeMounts:
            - name: nginx-index-file
              mountPath: /usr/share/nginx/html/
            - name: keys
              mountPath: /www/data/keys
            - name: key
              mountPath: /etc/nginx/conf.d/
              # subPath: key.conf
      volumes:
      - name: nginx-index-file
        configMap:
          name: index-html-configmap
      - name: key
        configMap:
          name: default-nginx
      - name: keys
        configMap:
          name: keys
