k8s/bastille/pki-webserver/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: pki-webserver
spec:
  selector:
    app: nginx
  ports:
  - name: http
    targetPort: 80
    port: 80
